# groupchat

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  REFERENCES.md  meme  meme_server.py  memes.json  pyproject.toml
.github/workflows/: ci.yml
assets/: demo-script.md
eval/: evals.json  run_eval.py
frames/: always-has-been.braille  anakin-padme.braille  ancient-aliens.braille  arthur-fist.braille  batman-slapping-robin.braille  bernie-mittens.braille  blinking-white-guy.braille  buff-doge-vs-cheems.braille  chloe-side-eye.braille  deal-with-it.braille  distracted-boyfriend.braille  do-you-want-ants.braille  doge.braille  dr-evil-air-quotes.braille  evil-kermit.braille  expanding-brain.braille  first-time.braille  fry-not-sure-if.braille  gollum-smeagol.braille  grumpy-cat.braille  grus-plan.braille  hackerman.braille  hide-the-pain-harold.braille  homer-bushes.braille  i-have-no-idea-what-im-doing.braille  ight-imma-head-out.braille  is-this-a-pigeon.braille  its-free-real-estate.braille  john-travolta-confused.braille  kombucha-girl.braille  leonardo-pointing.braille  let-me-in.braille  lock-in-horse.braille  math-lady.braille  mind-blown.braille  monkey-puppet.braille  not-stonks.braille  old-man-yells-at-cloud.braille  one-does-not-simply.braille  panik-kalm-panik.braille  (+26 more)
tests/: test_server.py
